--- a/Atelier6/CART_Ameliore.ipynb
+++ b/Atelier6/CART_Ameliore.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CART Amélioré"
+    "# CART Amélioré\n",
+    "\n",
+    "L'objectif de ce notebook est d'utiliser le même modèle d'arbre de régression, mais d'y ajouter des modifications supplémentaires, notamment les dates par semaine ainsi que d'autres variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,20 +133,21 @@
        "4       56093 2018-09-24        170.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dates =  pd.to_datetime(listings_prices[\"day\"], format='%Y-%m-%d')\n",
-    "week_prices = listings_prices.assign(date=dates).set_index(dates).groupby(['listing_id', pd.Grouper(key='date', freq='7D')]).mean().reset_index().loc[:, [\"listing_id\", \"date\", \"local_price\"]]\n",
-    "week_prices.head()"
+    "# TODO : Regrouper les prix par plages de 7 jours\n",
+    "\n",
+    "# END TODO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +156,7 @@
        "(18981, 3)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +240,7 @@
        "4       56093 2018-09-24        170.0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,8 +250,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On considère dorénavant un jeu de données $X$ où chaque individu, toujours identifié par le *listing_id*, est la fusion entre les variables de *listings* et le couple date/prix de *week_prices*. Cette fusion peut s'effectuer par le code suivant :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,8 +269,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On vérifie que l'on obtient bien le même nombre d'individus."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +286,7 @@
        "(18981, 20)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,49 +297,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_encoder = LabelEncoder()\n",
-    "X[\"label_dates\"] =  label_encoder.fit_transform(X[\"date\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(18981, 21)"
+       "Index(['listing_id', 'date', 'local_price', 'name', 'type', 'city',\n",
+       "       'neighborhood', 'latitude', 'longitude', 'person_capacity', 'beds',\n",
+       "       'bedrooms', 'bathrooms', 'is_rebookable', 'is_new_listing',\n",
+       "       'is_fully_refundable', 'is_host_highly_rated',\n",
+       "       'is_business_travel_ready', 'pricing_weekly_factor',\n",
+       "       'pricing_monthly_factor'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X.shape"
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maintenant, on encode numériquement deux variables : les dates et le type."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "X[\"label_dates\"] = # TODO\n",
+    "X[\"label_type\"] = # TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On sépare le jeu de données entre un ensemble d'entraînement ($80 \\%$) et un ensemble de test ($20 \\%$)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(\n",
-    "    X.loc[:, [\"label_dates\", \"latitude\", \"longitude\", \"person_capacity\", \"bedrooms\", \"bathrooms\"]],\n",
+    "    X.loc[:, [\"label_dates\", \"label_type\", \"latitude\", \"longitude\", \"person_capacity\", \"bedrooms\", \"bathrooms\"]],\n",
     "    X.loc[:, \"local_price\"],\n",
     "    test_size=0.2)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il ne reste plus qu'à créer l'arbre de régression et de l'optimiser par rapport à nos nouvelles données."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -335,56 +380,55 @@
        "           presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_tree = DecisionTreeRegressor(max_depth=8)\n",
-    "my_tree.fit(X_train, Y_train)"
+    "# TODO : Créer l'arbre de régression.\n",
+    "\n",
+    "# END TODO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variance score: 0.7333\n"
+      "Variance score: 0.6877\n"
      ]
     }
    ],
    "source": [
-    "print('Variance score: %.4f' % r2_score(Y_test, my_tree.predict(X_test)))"
+    "print('Variance score: %.4f' % r2_score(Y_test, air_bnb_tree.predict(X_test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'listing_id', 'name', 'type', 'city', 'neighborhood',\n",
-       "       'latitude', 'longitude', 'person_capacity', 'beds', 'bedrooms',\n",
-       "       'bathrooms', 'is_rebookable', 'is_new_listing', 'is_fully_refundable',\n",
-       "       'is_host_highly_rated', 'is_business_travel_ready',\n",
-       "       'pricing_weekly_factor', 'pricing_monthly_factor'],\n",
-       "      dtype='object')"
+       "'air_bnb_tree.pdf'"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "listings.columns"
+    "import graphviz \n",
+    "dot_data = tree.export_graphviz(air_bnb_tree, out_file=None) \n",
+    "graph = graphviz.Source(dot_data) \n",
+    "graph.render(\"air_bnb_tree\")"
    ]
   },
   {
@@ -411,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
