--- a/Atelier6/Encodage.ipynb
+++ b/Atelier6/Encodage.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder"
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from sklearn.feature_extraction import DictVectorizer"
    ]
   },
   {
@@ -26,7 +27,59 @@
    "source": [
     "## Encodage par dictionnaire\n",
     "\n",
-    "L'encodage par dictionnaire est fréquemment utilisé en NLP pour assimilier un mot particulier à un indice. Par exemple, si la phrase *le chat adore le poisson*, la phase pourra être encodée par *0 1 2 0 3*."
+    "L'encodage par dictionnaire est fréquemment utilisé en NLP pour assimilier un mot particulier à un indice. Par exemple, si on considère la phrase *le chat adore le poisson*, alors la phrase pourra être encodée par *0 1 2 0 3*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 2, 0, 7, 8, 7, 4, 1, 6, 9, 7, 3, 0, 5])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = [ \"le chat adore le poisson\", \"le chien aime la promenade\", \"le cheval adore galoper\" ]\n",
+    "label_encoder = LabelEncoder()\n",
+    "X_labels = label_encoder.fit_transform(\" \".join(X).split(\" \"))\n",
+    "X_labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans le cas du texte, il existe beaucoup de méthodes pour encoder numériquement les variables : par fréquence ou codage, par TF-IDF, par dictionnaire ou encore par *word embedding*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes : ['bleu' 'jaune' 'orange' 'rouge' 'vert']\n",
+      "Encodage par labels : [0 3 4 3 1 2 0 4 3 3 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = [ \"bleu\", \"rouge\", \"vert\", \"rouge\", \"jaune\", \"orange\", \"bleu\", \"vert\", \"rouge\", \"rouge\", \"orange\" ]\n",
+    "label_encoder = LabelEncoder()\n",
+    "X_labels = label_encoder.fit_transform(\" \".join(X).split(\" \"))\n",
+    "print(\"Classes :\", label_encoder.classes_)\n",
+    "print(\"Encodage par labels :\", X_labels)"
    ]
   },
   {
@@ -93,13 +146,6 @@
     "\n",
     "Autre exemple, supposons vouloir prédire la variation de la météo en fonction de la date : plutôt que de tronquer semaine par semaine ou jour par jour, on peut effectuer en encodage circulaire. On démarre de $0$ au mois de janvier pour arriver à $1$ en avril, puisque durant cette période, la météo varie beaucoup plus. Ensuite, on repasse à $0$ au mois juillet (en été, le temps reste globalement chaud) pour ensuite redescendre à $-1$ en octobre et terminer à $0$ en décembre."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -118,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
